--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,7 +7,7 @@
 <footer class="mt-auto text-center py-3 mx-2" th:fragment="footer">
 	<hr>
 	<a class="text-decoration-none" th:href="@{/}">
-		<img th:src="@{images/icon.png}" width="45" height="32">
+		<img th:src="@{/images/icon.png}" width="45" height="32">
 	</a>
 	<small class="text-muted">© 2021 Fatecando, Inc.</small>
 </footer>
