Fix user registration error

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -72,7 +72,7 @@
 
 						<div class="dropdown-menu dropdown-menu-lg-end">
 							<div class="text-center">
-								<a class="link-danger fw-bolder" th:href="@{/users/{id}(id=${user.id})}" th:text=${user.fullName}></a>
+								<a class="link-danger fw-bolder" th:href="@{/users/{id}(id=${currentUser.id})}" th:text=${currentUser.fullName}></a>
 							</div>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/annotations}">Minhas Anotações</a>
