Fix TestController - rename discipline field to subject

--- a/src/main/resources/templates/subjects/test.html
+++ b/src/main/resources/templates/subjects/test.html
@@ -18,7 +18,7 @@
 
 				<form action="#" method="post" th:action="@{/test}">
 					<button type="submit" class="btn btn-secondary mt-3"
-						th:text="|Finalizar e voltar para ${test.discipline.name}|">Finalizar e voltar para Banco de
+						th:text="|Finalizar e voltar para ${test.subject.name}|">Finalizar e voltar para Banco de
 						Dados</button>
 				</form>
 			</div>
