--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -42,7 +42,7 @@
 								<a class="dropdown-item" href="#" th:href="@{/admin/courses}">Cursos</a>
 							</li>
 							<li>
-								<a class="dropdown-item" href="#" th:href="@{/admin/disciplines}">Disciplinas</a>
+								<a class="dropdown-item" href="#" th:href="@{/admin/subjects}">Disciplinas</a>
 							</li>
 							<li>
 								<hr class="dropdown-divider">
