--- a/src/main/resources/templates/users/topic-edit.html
+++ b/src/main/resources/templates/users/topic-edit.html
@@ -66,7 +66,7 @@
 						<div class="col-md-6 mb-3">
 							<label class="form-label fw-bold" for="status">Disciplina</label>
 
-							<select class="form-select" id="discipline" name="discipline" disabled>
+							<select class="form-select" id="subject" name="subject" disabled>
 								<option th:value="${topic.subject.id}" th:text="${topic.subject.name}" selected></option>
 							</select>
 						</div>
