--- a/src/main/resources/templates/subjects/topic-details.html
+++ b/src/main/resources/templates/subjects/topic-details.html
@@ -366,7 +366,7 @@
 	</script>
 
 	<script type="text/javascript">
-		var annotationEditor = new Quill('#annotationEditor',
+		let annotationEditor = new Quill('#annotationEditor',
 				EditorOptions.TOPIC);
 
 		function openNav() {
