--- a/src/main/resources/templates/users/edit-profile.html
+++ b/src/main/resources/templates/users/edit-profile.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="https://thymeleaf.org" th:replace="~{fragments/layout :: base('Perfil', ~{::body}, _, _, _)}">
+<html xmlns:th="https://thymeleaf.org" th:replace="~{fragments/layout :: base('Editar Perfil', ~{::body}, _, _, _)}">
 <head>
 <meta charset="utf-8">
 </head>
 <body>
-	<div class="container-fluid col-md-6 mt-3">
+	<div class="container-fluid col-md-6 mt-4">
 		<div class="alert alert-success alert-dismissible fade show" role="alert"
 			th:if="${!#strings.isEmpty(message)}">
 			<span th:text=${message}></span>
@@ -19,7 +19,7 @@
 					<div class="mb-3">
 						<label for="fullName" class="form-label">Nome Completo</label>
 						<input type="text" id="fullName" class="form-control" th:field="*{fullName}"
-							th:classappend="${#fields.hasErrors('fullName')}? 'is-invalid'" aria-describedby="nameFeedback">
+							th:classappend="${#fields.hasErrors('fullName')}? 'is-invalid'" aria-describedby="nameFeedback" min="2">
 
 						<div id="nameFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('fullName')}"
 							th:errors="*{fullName}">Mensagem de erro</div>
@@ -37,7 +37,7 @@
 						</div>
 
 						<div class="col-md-6">
-							<label for="gender" class="form-label">Gênero</label>
+							<label for="gender" class="form-label">Sexo</label>
 
 							<select class="form-select" id="gender" name="gender">
 								<option th:each="gender : ${T(com.gutotech.fatecando.model.Gender).values()}" th:value="${gender}"
