Rename /game request mapping to /games

--- a/src/main/resources/templates/games/playing.html
+++ b/src/main/resources/templates/games/playing.html
@@ -80,7 +80,7 @@
 					</div>
 				</div>
 
-				<form class="text-center" action="#" method="post" th:action="@{/game/leave}">
+				<form class="text-center" action="#" method="post" th:action="@{/games/leave}">
 					<button type="submit" id="leave-game-button" class="btn btn-danger btn-sm" style="display: none;">Sair
 						do Game</button>
 				</form>
