--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -23,7 +23,7 @@
 						<a class="nav-link" href="#" th:href="@{/rewards}">Recompensas</a>
 					</li>
 					<li class="nav-item" sec:authorize="isAuthenticated()">
-						<a class="nav-link" href="#" th:href="@{/game}">Game</a>
+						<a class="nav-link" href="#" th:href="@{/games}">Games</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#" th:href="@{/ranking}">Ranking</a>
