--- a/src/main/resources/templates/games/games.html
+++ b/src/main/resources/templates/games/games.html
@@ -19,7 +19,7 @@
 
 						<div class="card shadow">
 							<div class="card-body">
-								<form action="#" method="post" th:action="@{/game}" th:object="${game}">
+								<form action="#" method="post" th:action="@{/games}" th:object="${game}">
 									<div class="mb-3">
 										<label for="name" class="form-label">Nome</label>
 										<input type="text" id="name" class="form-control" th:field="*{name}"
@@ -173,7 +173,7 @@
 							</div>
 
 							<div class="d-flex justify-content-end">
-								<form action="#" method="post" th:action="@{game/join/{id}(id=${game.id})}">
+								<form action="#" method="post" th:action="@{games/join/{id}(id=${game.id})}">
 									<button type="submit" class="btn btn-dark">Entrar</button>
 								</form>
 							</div>
